--- a/style.css
+++ b/style.css
@@ -1,30 +1,34 @@
 body {
-  background-color: #F6F9FC;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 300;
-  color: #575F7D;
+  font-family: "SF Pro Text", sans-serif;
   font-size: 17px;
-  line-height: 1.2;
+  font-weight: 300;
+  font-style: normal;
+  line-height: 21px;
+  color: #6e6e73;
+  background-color: #F6F9FC;
 }
 
 h1 {
-  font-family: "Kanit", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
+  font-family: "SF Pro Display", sans-serif;
   font-size: 32px;
   font-weight: 600;
+  line-height: 48px;
 }
 
 h2 {
-  color: #7ECE90;
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 600;
+  color: #1d1d1f;
+  padding: 20px;
+  margin: 20px;
 }
 
 a {
-  font-family: "Kanit", sans-serif;
+  font-family: "SF Pro Text", sans-serif;
   text-decoration: none;
-  color: #6B72E1;
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 12px;
+  font-weight: 400;
 }
 
 a:hover {
@@ -38,6 +42,10 @@ li {
 
 #introduction {
   margin-bottom: 40px;
+}
+
+.txt-primary {
+  color: #1d1d1f;
 }
 
 .container {
@@ -62,16 +70,25 @@ li {
   box-shadow: 5px 5px 3px rgba(0,0,0,.1);
 }
 
-.btn-blue {
-  background-color: #6B72E1;
+.btn-primary {
+  background-color: #6e6e73;
   color: white;
+  opacity: 0.6;
   padding: 15px 20px;
   border-radius: 4px;
 }
 
-.btn-blue:hover {
-  background-color: black;
+.btn-primary:hover {
+  background-color: #6e6e73;
   color: white;
+  opacity: 1;
+  box-shadow: 2px 4px 16px rgba(0,0,0,.16);
+  transform: scale3d(1.05,1.05,1.05);
+  transition: normal;
+  transition-duration: 0.3s;
+  transition-timing-function: cubic-bezier(0, 0, 0.5, 1);
+  transition-delay: 0.1s;
+  transition-property: all;
 }
 
 .list-inline {
@@ -86,12 +103,21 @@ li {
 
 .list-inline i {
   font-size: 50px;
-  color: rgb(230, 230, 230);
+  color: #6e6e73;
+  line-height: 0;
 }
 
 .list-inline i:hover {
-  color: black;
+  color: #1d1d1f;
+  box-shadow: 2px 4px 16px rgba(0,0,0,.16);
+  transform: scale3d(1.05,1.05,1.05);
+  transition: normal;
+  transition-duration: 0.3s;
+  transition-timing-function: cubic-bezier(0, 0, 0.5, 1);
+  transition-delay: 0.1s;
+  transition-property: all;
 }
+
 /* MEDIA QUERIES */
 
 @media (max-width: 960px) {
